@@ -42,6 +42,38 @@ name|analysis
 operator|.
 name|tokenattributes
 operator|.
+name|CharTermAttribute
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|tokenattributes
+operator|.
+name|CharTermAttributeImpl
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|tokenattributes
+operator|.
 name|OffsetAttribute
 import|;
 end_import
@@ -250,6 +282,17 @@ specifier|final
 name|NumericTokenStream
 name|ts
 decl_stmt|;
+comment|// NumericTokenStream does not support CharTermAttribute so keep it local
+DECL|field|termAtt
+specifier|private
+specifier|final
+name|CharTermAttribute
+name|termAtt
+init|=
+operator|new
+name|CharTermAttributeImpl
+argument_list|()
+decl_stmt|;
 DECL|field|ofsAtt
 specifier|protected
 specifier|final
@@ -275,19 +318,6 @@ DECL|field|hasValue
 specifier|protected
 name|boolean
 name|hasValue
-decl_stmt|;
-DECL|field|buf
-specifier|protected
-specifier|final
-name|char
-index|[]
-name|buf
-init|=
-operator|new
-name|char
-index|[
-literal|32
-index|]
 decl_stmt|;
 DECL|method|getNumericTokenStream
 specifier|static
@@ -340,6 +370,22 @@ name|ts
 operator|=
 name|ts
 expr_stmt|;
+comment|// dates tend to be longer, especially when math is involved
+name|termAtt
+operator|.
+name|resizeBuffer
+argument_list|(
+name|type
+operator|==
+name|TrieTypes
+operator|.
+name|DATE
+condition|?
+literal|128
+else|:
+literal|32
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Override
@@ -356,13 +402,18 @@ name|upto
 init|=
 literal|0
 decl_stmt|;
+name|char
+index|[]
+name|buf
+init|=
+name|termAtt
+operator|.
+name|buffer
+argument_list|()
+decl_stmt|;
 while|while
 condition|(
-name|upto
-operator|<
-name|buf
-operator|.
-name|length
+literal|true
 condition|)
 block|{
 specifier|final
@@ -396,8 +447,6 @@ name|upto
 operator|+=
 name|length
 expr_stmt|;
-block|}
-comment|// skip remaining data if buffer was too short:
 if|if
 condition|(
 name|upto
@@ -406,17 +455,27 @@ name|buf
 operator|.
 name|length
 condition|)
-block|{
-name|input
+name|buf
+operator|=
+name|termAtt
 operator|.
-name|skip
+name|resizeBuffer
 argument_list|(
-name|Long
+literal|1
+operator|+
+name|buf
 operator|.
-name|MAX_VALUE
+name|length
 argument_list|)
 expr_stmt|;
 block|}
+name|termAtt
+operator|.
+name|setLength
+argument_list|(
+name|upto
+argument_list|)
+expr_stmt|;
 name|this
 operator|.
 name|startOfs
