@@ -4460,6 +4460,129 @@ name|commit
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// a ridiculoulsy long date math expression that's still equivilent to july4
+specifier|final
+name|StringBuilder
+name|july4Long
+init|=
+operator|new
+name|StringBuilder
+argument_list|(
+name|july4
+argument_list|)
+decl_stmt|;
+specifier|final
+name|int
+name|iters
+init|=
+name|atLeast
+argument_list|(
+literal|10
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|iters
+condition|;
+name|i
+operator|++
+control|)
+block|{
+specifier|final
+name|String
+name|val
+init|=
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|atLeast
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|july4Long
+operator|.
+name|append
+argument_list|(
+literal|"+"
+operator|+
+name|val
+operator|+
+literal|"SECONDS-"
+operator|+
+name|val
+operator|+
+literal|"SECONDS"
+argument_list|)
+expr_stmt|;
+block|}
+comment|// term queries using date math (all of these should match doc#1)
+for|for
+control|(
+name|String
+name|q
+range|:
+operator|new
+name|String
+index|[]
+block|{
+literal|"bday:1976-07-04T12\\:08\\:56.45Z/SECOND+235MILLIS"
+block|,
+literal|"bday:1976-07-04T12\\:08\\:56.123Z/MINUTE+56SECONDS+235MILLIS"
+block|,
+literal|"bday:\"1976-07-04T12:08:56.45Z/SECOND+235MILLIS\""
+block|,
+literal|"bday:\"1976-07-04T12:08:56.123Z/MINUTE+56SECONDS+235MILLIS\""
+block|,
+literal|"{!term f=bday}1976-07-04T12:08:56.45Z/SECOND+235MILLIS"
+block|,
+literal|"{!term f=bday}1976-07-04T12:08:56.123Z/MINUTE+56SECONDS+235MILLIS"
+block|,
+literal|"{!term f=bday}"
+operator|+
+name|july4
+block|,
+literal|"{!term f=bday}"
+operator|+
+name|july4Long
+block|,
+literal|"bday:\""
+operator|+
+name|july4Long
+operator|+
+literal|"\""
+block|}
+control|)
+block|{
+name|assertQ
+argument_list|(
+literal|"check math on field query: "
+operator|+
+name|q
+argument_list|,
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+name|q
+argument_list|)
+argument_list|,
+literal|"*[count(//doc)=1]"
+argument_list|,
+literal|"//int[@name='id'][.='1']"
+argument_list|)
+expr_stmt|;
+block|}
+comment|// range queries using date math
 name|assertQ
 argument_list|(
 literal|"check math on absolute date#1"
